--- a/index.html
+++ b/index.html
@@ -4,44 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
-    <style>
-        .description{
-            background-color: lightblue;
-            margin: 2px;
-            padding: 5px;
-            border : solid #ffffffff;
-            display: flex;
-            margin-left: 5px;
-            margin-right: 90px;
-            justify-content: center;
-            box-shadow: 0px 0px 10px #000000;
-            border-radius: 10px;
-            font-size: medium;
-        }
-        *{
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            background-color: beige;
-        }
-        .box{
-            display: inline-flex;
-            /* background-color: beige; */
-        }
-        img {
-            margin-right: 40px;
-            border-radius: 50%;
-            object-fit: cover;
-        }
-        .me{
-            padding: 7px;
-            display: flex;
-            justify-content: center;
-            border: 2px solid white;
-            background-color: aliceblue ;
-            font-size: 40px;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="me">About Me</div>
