--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 <body>
     <div class="me">About Me</div>
     <div class="box">
-
         <div class="description">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae reiciendis explicabo quos eos minima possimus, quasi odio animi nulla culpa beatae ex qui non deserunt mollitia fugiat porro ad maxime nihil quis nam. Vel similique iste earum, sit ratione consequuntur saepe fugiat odio dicta omnis dolor. Incidunt ratione soluta quo delectus? Odio aliquid, obcaecati doloribus nobis iusto, ipsam doloremque quaerat, in ex officia magnam architecto! Reiciendis numquam ducimus excepturi cum porro ipsum dicta itaque, officiis eaque atque placeat, delectus fugiat quasi. Autem nisi sint est consequatur magnam impedit quia, aperiam, modi, nemo repellat minima magni quasi veniam voluptatibus?</p>
+            <p>Hey there! I am Sushruta Bera. I love coding :) . It is my foremost passion. I can code in java, python, c, SQL(a little bit), HTML, CSS and now I am trying out TypeScript. </p>
         </div>
         <div class="image">
             <img src="mepic.jpeg" alt="My Picture" width="350" height="500">
