--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="me">About Me</div>
+    <div class="me">-:About Me:-</div>
     <div class="box">
         <div class="description">
             <p>Hey there! I am Sushruta Bera. I love coding :) . It is my foremost passion. I can code in java, python, c, SQL(a little bit), HTML, CSS and now I am trying out TypeScript. </p>
