--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">About</a>
+                        <a class="nav-link" href="html/about.html">About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Projects</a>
