--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>My Webpage</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-    <link href="home_styles.css" rel="stylesheet">
+    <link href="css/home_styles.css" rel="stylesheet">
 </head>
 <body>
     <header class="bg-primary text-white text-center py-5">
