--- a/about.html
+++ b/about.html
@@ -1,20 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
-    <link rel="stylesheet" href="styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="about_styles.css">
 </head>
+
 <body>
-    <div class="me">-:About Me:-</div>
+    <div class="me">-: About Me :-</div>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Sushruta's Portfolio</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="projects.html">Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <div class="box">
         <div class="description">
-            <p>Hey there! I am Sushruta Bera. I love coding :) . It is my foremost passion. I can code in java, python, c, SQL(a little bit), HTML, CSS and now I am trying out TypeScript. </p>
+            <p>Hey there! I am Sushruta Bera. I love coding :) . It is my foremost passion. I can code in java, python,
+                C, SQL(a little bit), HTML, CSS and now I am trying out TypeScript. </p>
         </div>
         <div class="image">
-            <img src="mepic.jpeg" alt="My Picture" width="350" height="500">
+            <img src="IMG_20240920_103836258~3.jpg" alt="My Picture" width="350" height="500">
         </div>
     </div>
 </body>
+
 </html>
