--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,15 +6,13 @@
     <title>My Webpage</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-    <link href="home_styles.css" rel="stylesheet">
+    <link href="index_styles.css" rel="stylesheet">
 </head>
 <body>
-    <header class="bg-primary text-white text-center py-5">
-        <h1>Welcome to My Webpage</h1>
-    </header>
+    <div class="title">-: HomePage :-</div>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Sushruta's Webpage</a>
+            <a class="navbar-brand" href="#">Sushruta's Portfolio</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -28,10 +25,10 @@
                         <a class="nav-link" href="about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Projects</a>
+                        <a class="nav-link" href="projects.html">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -39,20 +36,23 @@
     </nav>
     <main class="container mt-5">
         <section>
-            <h2>About Me</h2>
-            <p>Hello! I am Sushruta Bera, a student learning web development..</p>
+            <h2>Welcome to my Portfolio</h2>
+            <h4>I have made this site using HTML, CSS and Bootstrap.</h4>
         </section>
         <section>
-            <h2>Projects</h2>
+            <h2>Contents:-</h2>
             <ul>
-                <li>Project 1: C</li>
-                <li>Project 2: Python</li>
-                <li>Project 3: SQL(basically sqlite3)</li>
+                <li>It has an about section.</li>
+                <li>A projects section mentioning the projects I have made.</li>
+                <li>And a contacts page for when someone wants to contact me.</li>
             </ul>
+        </section>
+        <section>
+            <p>I am a college student currently studying at VIT Vellore. Prior to this, I completed my schooling at Vidyasagar Shishu Niketan (CISCE Board). I have a deep passion for technology and web development.</p>
+            <p>Besides academics, I enjoy listening to music, playing cricket, and football. These hobbies help me stay active and creative.</p>
         </section>
     </main>
     <footer class="bg-dark text-white text-center py-3 mt-5">
-        <!-- <p>&copy; 2024 Sushruta's Webpage</p> -->
     </footer>
 </body>
 </html>
