--- a/contact.html
+++ b/contact.html
@@ -1,46 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Me</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="styles.css">
+    <script src="script.js"></script>
     <link href="contact_styles.css" rel="stylesheet">
 </head>
+
 <body>
     <div class="title text-center">-: Contact Me :-</div>
-    
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Sushruta's Portfolio</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+
+    <div class="navbar">
+        <a href="index.html">Home</a>
+        <div class="dropdown">
+            <button class="dropbtn" onclick="dropper()">More
+                <i class="fa fa-caret-down"></i>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="#">Contact</a></li>
-                </ul>
+            <div class="dropdown-content" id="menu">
+                <a href="about.html">About Me</a>
+                <a href="project.html">Projects</a>
+                <a href="contact.html">Contact Me</a>
             </div>
         </div>
-    </nav>
-    
-    <div class="container mt-5 box">
-        <div class="card p-4 shadow-lg">
-            <h2 class="text-center mb-4">Get in Touch</h2>
+    </div>
+
+    <div class="contact-container">
+        <div class="contact-box">
+            <h2 class="text-center">Get in Touch</h2>
             <p class="text-center">Feel free to reach out to me on these platforms:</p>
-            <div class="d-flex justify-content-center gap-4">
-                <a href="https://discord.com/channels/@me/1296825530389106699" target="_blank" class="btn btn-primary">Discord</a>
-                <a href="https://www.linkedin.com/in/sushruta-bera-372338254/" target="_blank" class="btn btn-info">LinkedIn</a>
+
+            <div class="social-links">
+                <a href="https://discord.com/channels/@me/1296825530389106699" target="_blank" class="btn discord">
+                    <i class="fab fa-discord"></i> Discord
+                </a>
+                <a href="https://www.linkedin.com/in/sushruta-bera-372338254/" target="_blank" class="btn linkedin">
+                    <i class="fab fa-linkedin"></i> LinkedIn
+                </a>
             </div>
-            <div class="text-center mt-4">
+
+            <div class="email-section text-center">
                 <h5>Email Me At:</h5>
-                <p><a href="mailto:sushrutabera1502@gmail.com">sushrutabera1502@gmail.com</a></p>
+                <p><a href="mailto:sushrutabera1502@gmail.com" class="email-link">sushrutabera1502@gmail.com</a></p>
             </div>
         </div>
     </div>
 </body>
+
 </html>
