--- a/index.html
+++ b/index.html
@@ -1,39 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Webpage</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="styles.css">
+    <script src="script.js"></script>
     <link href="index_styles.css" rel="stylesheet">
 </head>
+
 <body>
     <div class="title">-: HomePage :-</div>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Sushruta's Portfolio</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+
+    <div class="navbar">
+        <a href="index.html">Home</a>
+        <div class="dropdown">
+            <button class="dropbtn" onclick="dropper()">More
+                <i class="fa fa-caret-down"></i>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="projects.html">Projects</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
-                    </li>
-                </ul>
+            <div class="dropdown-content" id="menu">
+                <a href="about.html">About Me</a>
+                <a href="project.html">Projects</a>
+                <a href="contact.html">Contact Me</a>
             </div>
         </div>
-    </nav>
+    </div>
+
     <main class="container mt-5">
         <section>
             <h2>Welcome to my Portfolio</h2>
@@ -48,11 +41,14 @@
             </ul>
         </section>
         <section>
-            <p>I am a college student currently studying at VIT Vellore. Prior to this, I completed my schooling at Vidyasagar Shishu Niketan (CISCE Board). I have a deep passion for technology and web development.</p>
-            <p>Besides academics, I enjoy listening to music, playing cricket, and football. These hobbies help me stay active and creative.</p>
+            <p>I am a college student currently studying at VIT Vellore. Prior to this, I completed my schooling at
+                Vidyasagar Shishu Niketan (CISCE Board). I have a deep passion for technology and web development.</p>
+            <p>Besides academics, I enjoy listening to music, playing cricket, and football. These hobbies help me stay
+                active and creative.</p>
         </section>
     </main>
     <footer class="bg-dark text-white text-center py-3 mt-5">
     </footer>
 </body>
+
 </html>
