--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div class="title text-center">-: Contact Me :-</div>
+    <div class="title">-: Contact Me :-</div>
 
     <div class="navbar">
         <a href="index.html">Home</a>
